- fix ipad landscape - fix modal height on mobile devices

--- a/web/shared/modal.css
+++ b/web/shared/modal.css
@@ -5,27 +5,27 @@
 }
 
 .modal-height-fixed {
-  min-height: calc(var(--window-height) - 132px);
+  min-height: calc(var(--window-height) - 148px);
   /* min-height: calc(80vh - 132px);
   min-height: calc(80dvh - 132px); */
 }
 
 .modal-content {
-  max-height: calc(var(--window-height) - 132px);
+  max-height: calc(var(--window-height) - 148px);
   /* max-height: calc(80vh - 132px);
   max-height: calc(80dvh - 132px); */
 }
 
 @media (min-width: 1024px) {
-  .modal-height {
+  /* .modal-height {
     max-height: 75vh;
     max-height: 75dvh;
-  }
+  } */
 
-  .modal-content {
+  /* .modal-content {
     max-height: calc(75vh - 132px);
     max-height: calc(75dvh - 132px);
-  }
+  } */
 
   .modal-height-fixed {
     min-height: calc(75vh - 132px);
